// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should also render actions with a description matching the query 1`] = `
<div
  className="web-api-domain"
>
  <header
    className="web-api-domain-header"
  >
    <h2
      className="web-api-domain-title"
    >
      api
    </h2>
  </header>
  <SafeHTMLInjection
    htmlAsString="API Desc"
  >
    <div
      className="web-api-domain-description markdown"
    />
  </SafeHTMLInjection>
  <div
    className="web-api-domain-actions"
  >
    <Action
      action={
        {
          "changelog": [],
          "description": "Foo Desc",
          "hasResponseExample": false,
          "internal": false,
          "key": "foo",
          "post": false,
        }
      }
      domain={
        {
          "actions": [
            {
              "changelog": [],
              "description": "Foo Desc",
              "hasResponseExample": false,
              "internal": false,
              "key": "foo",
              "post": false,
            },
            {
              "changelog": [],
              "description": "Bar desc",
              "hasResponseExample": false,
              "internal": false,
              "key": "bar",
              "post": false,
            },
            {
              "changelog": [],
              "description": "foobar",
              "hasResponseExample": false,
              "internal": false,
              "key": "baz",
              "post": false,
            },
          ],
          "deprecated": false,
          "description": "API Desc",
          "internal": false,
          "path": "api",
        }
      }
      key="api/foo"
      showDeprecated={false}
      showInternal={false}
    />
    <Action
      action={
        {
          "changelog": [],
          "description": "foobar",
          "hasResponseExample": false,
          "internal": false,
          "key": "baz",
          "post": false,
        }
      }
      domain={
        {
          "actions": [
            {
              "changelog": [],
              "description": "Foo Desc",
              "hasResponseExample": false,
              "internal": false,
              "key": "foo",
              "post": false,
            },
            {
              "changelog": [],
              "description": "Bar desc",
              "hasResponseExample": false,
              "internal": false,
              "key": "bar",
              "post": false,
            },
            {
              "changelog": [],
              "description": "foobar",
              "hasResponseExample": false,
              "internal": false,
              "key": "baz",
              "post": false,
            },
          ],
          "deprecated": false,
          "description": "API Desc",
          "internal": false,
          "path": "api",
        }
      }
      key="api/baz"
      showDeprecated={false}
      showInternal={false}
    />
  </div>
</div>
`;

exports[`should not render deprecated actions 1`] = `
<div
  className="web-api-domain"
>
  <header
    className="web-api-domain-header"
  >
    <h2
      className="web-api-domain-title"
    >
      api
    </h2>
  </header>
  <SafeHTMLInjection
    htmlAsString="API Desc"
  >
    <div
      className="web-api-domain-description markdown"
    />
  </SafeHTMLInjection>
  <div
    className="web-api-domain-actions"
  />
</div>
`;

exports[`should not render internal actions 1`] = `
<div
  className="web-api-domain"
>
  <header
    className="web-api-domain-header"
  >
    <h2
      className="web-api-domain-title"
    >
      api
    </h2>
  </header>
  <SafeHTMLInjection
    htmlAsString="API Desc"
  >
    <div
      className="web-api-domain-description markdown"
    />
  </SafeHTMLInjection>
  <div
    className="web-api-domain-actions"
  />
</div>
`;

exports[`should render deprecated actions 1`] = `
<div
  className="web-api-domain"
>
  <header
    className="web-api-domain-header"
  >
    <h2
      className="web-api-domain-title"
    >
      api
    </h2>
  </header>
  <SafeHTMLInjection
    htmlAsString="API Desc"
  >
    <div
      className="web-api-domain-description markdown"
    />
  </SafeHTMLInjection>
  <div
    className="web-api-domain-actions"
  >
    <Action
      action={
        {
          "changelog": [],
          "deprecatedSince": "5.0",
          "description": "Foo Desc",
          "hasResponseExample": false,
          "internal": false,
          "key": "foo",
          "post": false,
        }
      }
      domain={
        {
          "actions": [
            {
              "changelog": [],
              "deprecatedSince": "5.0",
              "description": "Foo Desc",
              "hasResponseExample": false,
              "internal": false,
              "key": "foo",
              "post": false,
            },
          ],
          "deprecated": false,
          "description": "API Desc",
          "internal": false,
          "path": "api",
        }
      }
      key="api/foo"
      showDeprecated={true}
      showInternal={false}
    />
  </div>
</div>
`;

exports[`should render internal actions 1`] = `
<div
  className="web-api-domain"
>
  <header
    className="web-api-domain-header"
  >
    <h2
      className="web-api-domain-title"
    >
      api
    </h2>
  </header>
  <SafeHTMLInjection
    htmlAsString="API Desc"
  >
    <div
      className="web-api-domain-description markdown"
    />
  </SafeHTMLInjection>
  <div
    className="web-api-domain-actions"
  >
    <Action
      action={
        {
          "changelog": [],
          "description": "Foo Desc",
          "hasResponseExample": false,
          "internal": true,
          "key": "foo",
          "post": false,
        }
      }
      domain={
        {
          "actions": [
            {
              "changelog": [],
              "description": "Foo Desc",
              "hasResponseExample": false,
              "internal": true,
              "key": "foo",
              "post": false,
            },
          ],
          "deprecated": false,
          "description": "API Desc",
          "internal": false,
          "path": "api",
        }
      }
      key="api/foo"
      showDeprecated={false}
      showInternal={true}
    />
  </div>
</div>
`;

exports[`should render only actions matching the query 1`] = `
<div
  className="web-api-domain"
>
  <header
    className="web-api-domain-header"
  >
    <h2
      className="web-api-domain-title"
    >
      api
    </h2>
  </header>
  <SafeHTMLInjection
    htmlAsString="API Desc"
  >
    <div
      className="web-api-domain-description markdown"
    />
  </SafeHTMLInjection>
  <div
    className="web-api-domain-actions"
  >
    <Action
      action={
        {
          "changelog": [],
          "description": "Foo Desc",
          "hasResponseExample": false,
          "internal": false,
          "key": "foo",
          "post": false,
        }
      }
      domain={
        {
          "actions": [
            {
              "changelog": [],
              "description": "Foo Desc",
              "hasResponseExample": false,
              "internal": false,
              "key": "foo",
              "post": false,
            },
            {
              "changelog": [],
              "description": "Bar desc",
              "hasResponseExample": false,
              "internal": false,
              "key": "bar",
              "post": false,
            },
          ],
          "deprecated": false,
          "description": "API Desc",
          "internal": false,
          "path": "api",
        }
      }
      key="api/foo"
      showDeprecated={false}
      showInternal={false}
    />
  </div>
</div>
`;
